sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value i
    for (i<-0 to taille-2-i) {
                          ^