sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  {      
  var taille=getNombreValeurs()
  var trier=false
    for (i<-0 to taille-2-i) {
      trier=true
      if (plusPetit(i,i+1)==false) {
          echange(i,i+1)
          trier=false
      }
    }
  if (trier==true) {
    return
  }
}